# quantum-circuit-simulation

./: .gitignore  CMakeLists.txt  README.md
c++/: CMakeLists.txt  Makefile  README.md  generate.sh  vcpkg.json
c++/benchmarks/: benchmarks.cpp  run_benchmark_options.sh
c++/results/: QC_Tester_results_4_4.txt  QC_Tester_results_8_8.txt  generate_latex_table.ipynb  latex_table_results_4_4.tex  latex_table_results_8_8.tex
c++/src/: Polar.h  QuantumCircuit.h  SmallPolar.h  Timer.h  Traits.h  Utils.cpp  Utils.h  main.cpp
c++/tests/: QC_Tester.cpp  QuantumCircuitTest.cpp  SmallPolarTest.cpp
python/: README.md  example.ipynb  requirements.txt
python/benchmarking/: README.md  benchmark.py
python/profiling/: profile.sh
python/results/: benchmark_data.json  benchmark_max_performance_data.json  plot.ipynb  profiling_results_qc_v1.txt  profiling_results_qc_v2.txt  profiling_results_qc_v3_no_hadamards.txt  profiling_results_qc_v3_some_hadamards.txt
python/src/: README.md  base_qc.py  quantum_circuit_v1.py  quantum_circuit_v2.py  quantum_circuit_v3.py
python/src/qc-sim/: base_qc.py  quantum_circuit_v1.py  quantum_circuit_v2.py  quantum_circuit_v3.py  quantum_circuit_v4.py
python/tests/: README.md  test_cp_gate.py  test_h_gate.py  test_qft.py  test_swap_gate.py  test_x_gate.py
src/: QuantumCircuit.h  SmallPolar.h  Traits.h  Utils.h  main.cpp
tests/: QC_Tester.cpp
